--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
 </parent>  
 
 <properties>  
-    <java.version>1.8</java.version>  
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+ 	<maven.compiler.target>1.8</maven.compiler.target>  
 </properties>
 
 <dependencies>  
@@ -61,10 +63,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <fork>true</fork>
-                    <executable>C:\Program Files\Java\jdk-17.0.4.1\bin\javac</executable>
                 </configuration>
             </plugin>
             <plugin>
@@ -89,7 +90,5 @@
 		</plugins>
 		<finalName>tejal_ipranges_otto</finalName>
 	</build>
-
-
 
 </project>
