--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
     <groupId>com.jayway.jsonpath</groupId>
     <artifactId>json-path</artifactId>
     </dependency>
+    
+    <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-all</artifactId>
+    <version>1.8.4</version>
+    <scope>test</scope>
+	</dependency>
 	
 	
 	<dependency>
